--- a/frontend/src/Components/Admin/Partials/AdminSidebar.css
+++ b/frontend/src/Components/Admin/Partials/AdminSidebar.css
@@ -3,6 +3,7 @@
     background-color: white;
     border-right: 2px solid rgb(235, 235, 235);
     display: flex;
+    min-width: 200px;
     flex-direction: column;
 }
 
