--- a/frontend/src/Pages/UserPage/TicketPage.css
+++ b/frontend/src/Pages/UserPage/TicketPage.css
@@ -1,10 +1,17 @@
 .ticket-page{
     width: 100%;
-    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 50px 0;
+}
+
+.ticket-parent-container{
+    display: grid;
+    grid-template-columns: 1fr;
     justify-content: center;
+    align-items: center;
+    gap: 200px;
 }
 
 .ticket-container{
@@ -12,6 +19,8 @@
     min-width: 900px;
     max-width: 900px;
     display: flex;
+    page-break-inside: avoid;
+    break-inside: avoid;
 }
 
 .ticket{
@@ -129,7 +138,7 @@
 }
 
 .ticket-page button{
-    margin-top: 50px;
+    margin: 50px 0;
     background-color: #ff3131;
     color: white;
     padding: 10px 60px;
