--- a/frontend/src/styles/BookingPage.css
+++ b/frontend/src/styles/BookingPage.css
@@ -1,6 +1,7 @@
 .booking-page{
     width: 100%;
-    height: calc(100vh - 80px);
+    min-height: calc(100vh);
+    background-color: rgb(240, 240, 240);
 }
 
 .booking-page.admin{
@@ -39,40 +40,41 @@
     padding: 20px;
 }
 
-.booking-page .container{
+.booking-page > form .container{
     padding: 40px;
     border-radius: 20px;
     box-shadow: 0 0 10px 3px rgb(192, 192, 192);
+    background-color: white;
 }
 
-.booking-page .container span{
+.booking-page > form .container span{
     color: rgb(165, 165, 165);
 }
 
-.booking-page .container .select-container{
+.booking-page > form .container .select-container{
     margin: 30px 0;
     display: grid;
     gap: 20px;
     grid-template-columns: repeat(2, 170px);
 }
 
-.booking-page .container .select-div{
+.booking-page > form .container .select-div{
     display: flex;
     flex-direction: column;
 }
 
-.booking-page .container .select-div select{
+.booking-page > form .container .select-div select{
     margin: 5px 0;
     height: 30px;
     outline: none;
 }
 
-.booking-page .container .select-div p{
+.booking-page > form .container .select-div p{
     margin: 10px 0;
     color: rgb(165, 165, 165);
 }
 
-.booking-page .container .input-container{
+.booking-page > form .container .input-container{
     color: rgb(165, 165, 165);
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -81,7 +83,7 @@
     width: 100%;
 }
 
-.booking-page .container .input-container input{
+.booking-page > form .container .input-container input{
     outline: none;
     height: 20px;
     display: block;
