--- a/frontend/src/Components/User/Partials/UserHeader.css
+++ b/frontend/src/Components/User/Partials/UserHeader.css
@@ -86,3 +86,13 @@
     height: 95%;
     margin-right: 15px;
 }
+
+@media screen and (max-width: 425px) {
+    .user-page header > div > h3{
+        font-size: 15px
+    }
+
+    .user-page header > button{
+        height: 30px;
+    }
+}
