--- a/frontend/src/styles/AvailableFlights.css
+++ b/frontend/src/styles/AvailableFlights.css
@@ -27,6 +27,8 @@
 
 .available-flights .container{
     width: 80%;
+    display: flex;
+    justify-content: center;
 }
 
 .available-flights > button{
