--- a/frontend/src/Components/User/Modals/PassengersModal.css
+++ b/frontend/src/Components/User/Modals/PassengersModal.css
@@ -6,12 +6,14 @@
     right: 0;
     background-color: rgba(119, 119, 119, 0.8);
     z-index: 5;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    overflow-y: auto;
 }
 
 .passengers-modal-container .modal{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     padding: 20px;
     background-color: white;
     border-radius: 20px;
@@ -20,6 +22,8 @@
 
 .passengers-modal-container .table-container{
     width: 100%;
+    height: 300px;
+    overflow-y: auto;
 }
 
 .passengers-modal-container table{
