--- a/frontend/src/Pages/UserPage/UserFlights.css
+++ b/frontend/src/Pages/UserPage/UserFlights.css
@@ -4,10 +4,18 @@
     display: flex;
     justify-content: center;
     background-color: rgb(240, 240, 240);
+    padding-bottom: 30px;
 }
 
 .user-bookings .container{
     width: 70%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.user-bookings .container > div{
+    width: 100%;
 }
 
 .user-bookings select{
@@ -17,7 +25,6 @@
 }
 
 .user-bookings .flight{
-    width: 100%;
     background-color: white;
     margin: 30px 0;
     border-radius: 20px;
