--- a/frontend/src/styles/Flights.css
+++ b/frontend/src/styles/Flights.css
@@ -7,6 +7,8 @@
     box-sizing: border-box;
     margin: 30px 0;
     border-radius: 20px;
+    width: 100%;
+    padding-bottom: 30px;
 }
 
 .flights-container > div:first-child{
@@ -103,6 +105,19 @@
 
 .no-flights > div{
     text-align: center;
+}
+
+.see-more{
+    background-color: #ff3131;
+    color: white;
+    padding: 10px 100px;
+    border: none;
+    cursor: pointer;
+    font-size: 15px;
+}
+
+.see-more:hover{
+    background-color: #ff9393;
 }
 
 @media screen and (max-width: 700px){
