--- a/frontend/src/Pages/AuthPages/AdminLoginStyle.css
+++ b/frontend/src/Pages/AuthPages/AdminLoginStyle.css
@@ -1,85 +1,123 @@
 @keyframes fadeIn {
     from {
         opacity: 0;
-        transform: translateY(-150px);
+        transform: translateX(-150px);
     }
     to {
         opacity: 1;
-        transform: translateY(0);
+        transform: translateX(0);
     }
 }
 
 
 .admin-login-page{
-    background-image: url('/icons/background.jpg');
+    background-image: url('/icons/airplane-bg.png');
     background-position: center;
     background-size: cover;
     height: 100vh;
     position: relative;
-    animation: fadeIn 0.8s ease-out;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.admin-login-page .cover-color{
-    position: relative;
-    z-index: 1;
-}
 
 .admin-login-page .login-container{
     border-radius: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: start;
     box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.3);
     opacity: 0;
-    animation: fadeIn 1.5s ease-out forwards 1s;
+    background-color: white;
+    animation: fadeIn 0.8s ease-out forwards 0.5s;
+    padding: 70px 30px;
+    position: relative;
+    border: 1px solid rgb(170, 170, 170);
+}
+
+.admin-login-page .login-container > img:first-child{
+    position: absolute;
+    width: 110px;
+    background-color: white;
+    top: -80px;
+    border-radius: 50%;
+    padding: 20px;
+    border: 1px solid rgb(170, 170, 170);
 }
 
 .admin-login-page .login-container h1{
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 300;
     letter-spacing: 3px;
-    font-size: 50px;
-    color: rgba(255, 255, 255, .5);
-    margin: 90px;
+    margin-bottom: 70px;
+}
+
+.admin-login-page .login-container > div{
+    display: grid;
+    width: 340px;;
+    grid-template-columns: 1fr;
+    margin-bottom: 30px;
+    gap: 10px;
+}
+
+.admin-login-page .input-container{
+    position: relative;
+    font-size: 15px;
+}
+
+.admin-login-page .input-container span{
+    position: absolute;
+    top: 10px;
+    left: 7px;
+    font-size: 14px;
+    color: grey;
+    background-color: white;
+    padding: 3px 5px;
+    display: none;
+    transition: opacity 0.5s ease-in-out;
+}
+
+.admin-login-page .onFocus{
+    border: 1px solid #ff3131;
+}
+
+.admin-login-page .onFocus::placeholder{
+    opacity: 0;
+}
+
+.admin-login-page .onFocus + span{
+    display: block;
+    color: #ff3131;
+    animation: show-span 0.5s ease-out forwards;
+}
+
+@keyframes show-span {
+    from{
+        top: 50%;
+    }
+    to{
+        top: -12px
+    }
 }
 
 .admin-login-page .login-container input{
-    height: 40px;
-    width: 70%;
-    font-size: 17px;
-    padding: 10px;
-    border-radius: 10px;
-    margin-bottom: 50px;
-    color: rgba(255, 255, 255, .8);
-    background-color: rgba(255, 255, 255, .5);
-    border: none;
-    text-align: center;
+    width: 100%;
+    height: 35px;
+    margin-bottom: 25px;
+    padding-left: 7px;
+    outline: none;
+    box-sizing: border-box;
 }
 
 .admin-login-page .login-container button{
-    width: 70%;
-    height: 60px;
-    font-size: 22px;
-    letter-spacing: 3px;
-    border-radius: 12px;
+    width: 100%;
+    height: 40px;
+    border-radius: 10px;
     border: none;
-    margin-bottom: 30px;
-    margin-top: 40px;
-    color: rgba(255, 255, 255, .8);
-    background-color: rgba(233, 92, 36,.8);
+    color: white;
+    background-color: #ff3131;
+    cursor: pointer;
 }
 
-.admin-login-page .login-container > :last-child{
-    width: 40%;
-    height: 20px;
-    font-size: 17px;
-    letter-spacing: 2px;
-    border: none;
-    color: rgba(255, 255, 255, .8);
-    background-color:transparent;
-    text-decoration: underline;
+.admin-login-page .login-container button:hover{
+    background-color: #ffabab;
 }
