--- a/frontend/src/styles/TablePage.css
+++ b/frontend/src/styles/TablePage.css
@@ -1,4 +1,4 @@
-.admin-page{
+.table-page{
     padding: 0 20px;
     padding-top: 70px;
     width: 100%;
@@ -7,18 +7,18 @@
     background-color: rgb(247, 247, 247);
 }
 
-.admin-page > h1{
+.table-page > h1{
     font-size: 30px;
 }
 
-.admin-page > input[type = 'search']{
+.table-page > input[type = 'search']{
     width: 300px;
     height: 30px;
     margin-bottom: 30px;
     outline: none;
 }
 
-.admin-page .table-container{
+.table-page .table-container{
     width: 100%;
     height: 65%;
     overflow-y: auto;
@@ -27,38 +27,38 @@
     border: 2px solid rgb(235, 235, 235);
 }
 
-.admin-page .table-container table{
+.table-page .table-container table{
     width: 100%;
     border-collapse: collapse;
     background-color: white;
 }
 
-.admin-page .table-container table th{
+.table-page .table-container table th{
     padding: 10px;
     background-color: #ff3131;
     color: white;
     border: 1px solid white;
 }
 
-.admin-page .table-container table td{
+.table-page .table-container table td{
     padding: 8px;
     border-bottom: 1px solid rgb(236, 236, 236);
     text-align: center;
 }
 
-.admin-page td > button{
+.table-page td > button{
     border: none;
     background-color: white;
     cursor: pointer;
     margin: 10px 5px;
 }
 
-.admin-page td > button img{
+.table-page td > button img{
     width: 25px;
     height: 25px;
 }
 
-.admin-page .add-btn{
+.table-page .add-btn{
     margin-top: 40px;
     background-color: #ff3131;
     position: absolute;
@@ -69,7 +69,7 @@
     cursor: pointer;
 }
 
-.admin-page .add-btn:hover{
+.table-page .add-btn:hover{
     background-color: #ffbaba;
 }
 
@@ -86,4 +86,10 @@
 .red-td{
     color: red;
     background-color: rgb(255, 215, 215);
+}
+
+@media screen and (min-width: 768px) {
+    .table-page{
+        padding-left: 230px;
+    }
 }
