--- a/frontend/src/Components/Admin/Modals/AddSuccess.css
+++ b/frontend/src/Components/Admin/Modals/AddSuccess.css
@@ -1,4 +1,4 @@
-.add-admin-sucess{
+.add-success{
     padding: 30px;
     background-color: white;
     display: flex;
@@ -7,11 +7,11 @@
     border-radius: 30px;
 }
 
-.add-admin-sucess img{
+.add-success img{
     width: 70px;
 }
 
-.add-admin-sucess button{
+.add-success button{
     width: 100%;
     height: 35px;
     margin-top: 50px;
@@ -21,6 +21,6 @@
     cursor: pointer;
 }
 
-.add-admin-sucess button:hover{
+.add-success button:hover{
     background-color: #ff9f9f;
 }
