--- a/frontend/src/Components/Admin/Partials/AdminHeader.css
+++ b/frontend/src/Components/Admin/Partials/AdminHeader.css
@@ -3,7 +3,6 @@
     top: 0;
     right: 0;
     left: 0;
-    height: 56px;
     background-color: white;
     border-bottom: 2px solid rgb(235, 235, 235);
     padding: 10px;
@@ -13,13 +12,16 @@
 .admin-header .logo-container{
     display: flex;
     align-items: center;
-    font-size: 25px;
     font-weight: 600;
     color: #ff3131;
 }
 
+.admin-header span{
+    color: #ffbd59;
+}
+
 .admin-header .logo-container > img{
-    width: 50px;
-    height: 50px;
+    width: 60px;
+    height: 60px;
     margin-right: 10px;
 }
