--- a/frontend/src/Components/User/Modals/PassengersModal.css
+++ b/frontend/src/Components/User/Modals/PassengersModal.css
@@ -18,11 +18,31 @@
     background-color: white;
     border-radius: 20px;
     width: 500px;
+    font-size: 15px;
 }
+
+.passengers-modal-container .modal > div:first-child{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.passengers-modal-container .modal > div:first-child img{
+    width: 70px;
+}
+
+.passengers-modal-container .modal > div:first-child h3{
+    color: red;
+}
+
+.passengers-modal-container .modal > div:first-child span{
+    color: #ffbd59;
+}
+
 
 .passengers-modal-container .table-container{
     width: 100%;
-    height: 300px;
+    height: 250px;
     overflow-y: auto;
 }
 
@@ -69,6 +89,10 @@
 @media  screen and (max-width: 500px){
     .passengers-modal-container .modal{
         width: 90%;
-        font-size: 10px;
+        font-size: 12px;
+    }
+
+    .passengers-modal-container .table-container{
+        height: 200px;
     }
 }
