--- a/frontend/src/Pages/AdminPage/AdminDashboard.css
+++ b/frontend/src/Pages/AdminPage/AdminDashboard.css
@@ -1,19 +1,16 @@
 .admin-dashboard{
-    width: 100%;
-    min-height: 100vh;
-    padding: 20px 20px;
+    padding: 80px 20px 20px 20px;
     background-color: #f0f0f0;
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
 
-
 .admin-dashboard .top-container{
     display: grid;
     padding: 20px 0;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 10px;
 }
 
 .admin-dashboard .top-container > div{
@@ -26,7 +23,8 @@
 
 .admin-dashboard .top-container > div::after,
 .admin-dashboard .bar-chart-container::after,
-.admin-dashboard .pie-container::after{
+.admin-dashboard .pie-container::after,
+.admin-dashboard .line-chart-container::after{
     content: "";
     background-color: #ff3131;
     position: absolute;
@@ -65,29 +63,30 @@
 }
 
 .admin-dashboard .chart-container{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    display: grid;
+    grid-template-columns: 3fr 1fr;
     margin-top: 30px;
+    gap: 30px;
 }
 
-.admin-dashboard .bar-chart-container{
-    width: 65%;
+.admin-dashboard .bar-chart-container,
+.admin-dashboard .line-chart-container{
     background-color: white;
     position: relative;
 }
 
 .admin-dashboard .pie-container{
-    width: 30%;
     height: 400px;
     font-size: 13px;
+    padding: 0 15px;
     background-color: white;
     text-align: center;
     position: relative;
+    box-sizing: border-box;
 }
 
 @media screen and (min-width: 768px) {
     .admin-dashboard{
-        padding-left: 250px;
+        padding-left: 220px;
     }
 }
