--- a/frontend/src/styles/BookingPage.css
+++ b/frontend/src/styles/BookingPage.css
@@ -1,20 +1,23 @@
 .booking-page{
-    width: 100%;
-    min-height: calc(100vh);
+    min-height: calc(100vh - 130px);
     background-color: rgb(240, 240, 240);
+    padding-top: 50px;
 }
 
 .booking-page.frontdesk{
-    padding-top: 70px;
+    padding-top: 130px;
 }
 
 .booking-page > div:first-child{
+    position: fixed;
     display: flex;
     flex-wrap: wrap;
     width: 100%;
+    top: 80px;
     background-color: #ff3131;
     color: white;
     font-weight: 600;
+    z-index: 1;
 }
 
 .booking-page > div:first-child p:first-child{
@@ -106,52 +109,6 @@
 }
 
 .booking-page .next-btn:not(:disabled):hover{
-    background-color: #ff9f9f;
-}
-
-.booking-page .passenger-form-container{
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-color: rgb(0, 0, 0, 0.5);
-    z-index: 3;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.booking-page .passenger-form{
-    padding: 30px;
-    background-color: white;
-    border-radius: 20px;
-    display: flex;
-    color: rgb(165, 165, 165);
-    flex-direction: column;
-}
-
-.booking-page .passenger-form p{
-    margin: 20px 0;
-    font-size: 20px;
-}
-
-.booking-page .passenger-form input{
-    margin-bottom: 30px;
-    width: 300px;
-    height: 25px;
-    outline: none;
-}
-
-.booking-page .passenger-form  button{
-    background-color: #ff3131;
-    color: white;
-    cursor: pointer;
-    padding: 10px 0;
-    border: none;
-}
-
-.booking-page .passenger-form button:hover{
     background-color: #ff9f9f;
 }
 
