--- a/frontend/src/Components/Admin/Partials/AdminHeader.css
+++ b/frontend/src/Components/Admin/Partials/AdminHeader.css
@@ -6,7 +6,21 @@
     background-color: white;
     border-bottom: 2px solid rgb(235, 235, 235);
     padding: 10px;
-    z-index: 2;
+    z-index: 5;
+}
+
+.admin-header button{
+    height: 30px;
+    width: 40px;
+    border: none;
+    background-color: white;
+    cursor: pointer;
+    display: none;
+}
+
+.admin-header button img{
+    width: 100%;
+    height: 100%;
 }
 
 .admin-header .logo-container{
@@ -24,4 +38,11 @@
     width: 60px;
     height: 60px;
     margin-right: 10px;
+}
+
+@media screen and (max-width: 768px) {
+    .admin-header button{
+        display: flex;
+    }
+
 }
