--- a/frontend/src/Components/Search/SearchFilter.css
+++ b/frontend/src/Components/Search/SearchFilter.css
@@ -3,6 +3,8 @@
     padding: 20px;
     margin-top: 30px;
     border-radius: 20px;
+    border: 1px solid rgb(219, 219, 219);
+    box-shadow: 0 0 5px 2px rgb(199, 199, 199);
 }
 
 .search-filter > div{
