--- a/frontend/src/Pages/AuthPages/AdminLoginStyle.css
+++ b/frontend/src/Pages/AuthPages/AdminLoginStyle.css
@@ -31,7 +31,7 @@
     opacity: 0;
     background-color: white;
     animation: fadeIn 0.8s ease-out forwards 0.5s;
-    padding: 70px 30px;
+    padding: 70px 30px 30px 30px;
     position: relative;
     border: 1px solid rgb(170, 170, 170);
 }
@@ -44,6 +44,37 @@
     border-radius: 50%;
     padding: 20px;
     border: 1px solid rgb(170, 170, 170);
+}
+
+.admin-login-page .login-container .user-btn-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin: 30px 0 50px 0;
+}
+
+.admin-login-page .login-container .user-btn-container button{
+    background-color: white;
+    height: 25px;
+    border: none;
+    font-size: 15px;
+    cursor: pointer;
+    position: relative;
+}
+
+.admin-login-page .login-container .user-btn-container button:hover,
+.admin-login-page .login-container .user-btn-container .selected{
+    color: #ff3131;
+    font-weight: 600;
+}
+
+.admin-login-page .login-container .user-btn-container .selected::after{
+    content: "";
+    position: absolute;
+    bottom: -10px;
+    left: 10px;
+    right: 10px;
+    height: 3px;
+    background-color: red;
 }
 
 .admin-login-page .login-container h1{
@@ -114,7 +145,7 @@
     box-sizing: border-box;
 }
 
-.admin-login-page .login-container button{
+.admin-login-page .login-container .login-btn{
     width: 100%;
     height: 40px;
     border-radius: 10px;
@@ -122,8 +153,9 @@
     color: white;
     background-color: #ff3131;
     cursor: pointer;
+    margin-top: 30px;
 }
 
-.admin-login-page .login-container button:hover{
+.admin-login-page .login-container .login-btn:hover{
     background-color: #ffabab;
 }
