--- a/frontend/src/styles/BookingPage.css
+++ b/frontend/src/styles/BookingPage.css
@@ -1,7 +1,8 @@
 .booking-page{
     min-height: calc(100vh - 130px);
-    background-color: rgb(240, 240, 240);
+    background-color: rgb(247, 247, 247);
     padding-top: 50px;
+    overflow-x: auto;
 }
 
 .booking-page.frontdesk{
@@ -46,7 +47,8 @@
 .booking-page > form .container{
     padding: 40px;
     border-radius: 20px;
-    box-shadow: 0 0 10px 3px rgb(192, 192, 192);
+    box-shadow: 0 0 10px 2px rgb(199, 199, 199);
+    border: 1px solid rgb(219, 219, 219);
     background-color: white;
 }
 
