--- a/frontend/src/styles/Flights.css
+++ b/frontend/src/styles/Flights.css
@@ -9,6 +9,8 @@
     border-radius: 20px;
     width: 100%;
     padding-bottom: 30px;
+    box-shadow: 0 0 5px 2px rgb(199, 199, 199);
+    border: 1px solid rgb(219, 219, 219);
 }
 
 .flights-container > div:first-child{
