--- a/frontend/src/Components/Booking/Summary.css
+++ b/frontend/src/Components/Booking/Summary.css
@@ -1,4 +1,4 @@
-.payment-summary{
+.summary{
     position: fixed;
     top: 0;
     bottom: 0;
@@ -6,21 +6,21 @@
     right: 0;
     z-index: 3;
     background-color: rgb(150, 150, 150, 0.5);
-    display: flex;
-    align-items: center;
     overflow-y: auto;
-    justify-content: center;
 }
 
-.payment-summary .container{
+.summary .container{
+    position: absolute;
+    top: 50px;
+    left: 50%;
+    transform: translateX(-50%);
     background-color: white;
-    width: 340px;
     border-radius: 20px;
     display: flex;
     flex-direction: column;
 }
 
-.payment-summary .container .header{
+.summary .container .header{
     background-color: #ff3131;
     color: white;
     flex: 1;
@@ -29,19 +29,38 @@
     border-top-right-radius: 20px;
 }
 
-.payment-summary .container .items{
+.summary .container .items{
     display: grid;
+    width: 325px;
     grid-template-columns: 1fr 1fr;
     justify-content: space-between;
     border-bottom: 2px solid rgb(172, 172, 172);
     padding: 10px 30px;
 }
 
-.payment-summary .container .pay-btn-container{
+.summary .container .items-container{
+    width: 400px;
+}
+
+.summary .container .items-container table{
+    width: 100%;
+    border-collapse: collapse;
+    text-align: center;
+}
+
+.summary .container .items-container th{
     padding: 20px;
 }
 
-.payment-summary .container .pay-btn-container button{
+.summary .container .items-container td{
+    padding: 10px;
+}
+
+.summary .container .pay-btn-container{
+    padding: 20px;
+}
+
+.summary .container .pay-btn-container button{
     background-color: #ff3131;
     width: 100%;
     height: 35px;
@@ -49,8 +68,9 @@
     border: none;
     font-size: 20px;
     cursor: pointer;
+    margin: 10px 0;
 }
 
-.payment-summary .container .pay-btn-container button:hover{
+.summary .container .pay-btn-container button:hover{
     background-color: #ffafaf;
 }
