--- a/frontend/src/Components/Booking/Summary.css
+++ b/frontend/src/Components/Booking/Summary.css
@@ -61,16 +61,19 @@
 }
 
 .summary .container .pay-btn-container button{
-    background-color: #ff3131;
     width: 100%;
     height: 35px;
-    color: white;
-    border: none;
     font-size: 20px;
     cursor: pointer;
     margin: 10px 0;
 }
 
-.summary .container .pay-btn-container button:hover{
+.summary .container .pay-btn-container button:first-child{
+    background-color: #ff3131;
+    color: white;
+    border: none;
+}
+
+.summary .container .pay-btn-container button:first-child:hover{
     background-color: #ffafaf;
 }
