--- a/frontend/src/styles/BookingPage.css
+++ b/frontend/src/styles/BookingPage.css
@@ -115,7 +115,7 @@
 }
 
 @media (max-width: 500px){
-    .booking-page .container .select-container{
+    .booking-page > form .container .select-container{
         grid-template-columns: 1fr;
     }
 }
