--- a/frontend/src/Components/Booking/Summary.css
+++ b/frontend/src/Components/Booking/Summary.css
@@ -42,18 +42,35 @@
     width: 400px;
 }
 
-.summary .container .items-container table{
-    width: 100%;
-    border-collapse: collapse;
-    text-align: center;
+.summary .container .items-container .toggle-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 10px;
+    font-weight: 600;
 }
 
-.summary .container .items-container th{
-    padding: 20px;
+.summary .container .taxes-and-fees,
+.summary .container .fare-details{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+    margin: 0 20px;
 }
 
-.summary .container .items-container td{
-    padding: 10px;
+.summary .container .items-container button{
+    background-color: white;
+    border: none;
+    font-size: 15px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    font-weight: 600;
+}
+
+.summary .container .items-container button img{
+    width: 15px;
+    margin-left: 10px;
 }
 
 .summary .container .pay-btn-container{
