--- a/frontend/src/Components/Booking/Summary.css
+++ b/frontend/src/Components/Booking/Summary.css
@@ -29,15 +29,6 @@
     border-top-right-radius: 20px;
 }
 
-.summary .summary-container .items{
-    display: grid;
-    width: 325px;
-    grid-template-columns: 1fr 1fr;
-    justify-content: space-between;
-    border-bottom: 2px solid rgb(172, 172, 172);
-    padding: 10px 30px;
-}
-
 .summary .summary-container .items-container{
     width: 400px;
 }
@@ -91,4 +82,10 @@
 
 .summary .summary-container .pay-btn-container button:first-child:hover{
     background-color: #ffafaf;
+}
+
+@media screen and (max-width: 500px){
+    .summary .summary-container .items-container{
+        width: 90vw;
+    }
 }
