--- a/frontend/src/styles/TablePage.css
+++ b/frontend/src/styles/TablePage.css
@@ -17,9 +17,16 @@
     outline: none;
 }
 
+.table-page select{
+    width: 200px;
+    height: 30px;
+    margin: 20px 0;
+    margin-left: 30px;
+}
+
 .table-page .table-container{
     width: 100%;
-    height: 70%;
+    height: 67%;
     overflow-y: auto;
     overflow-x: auto;
     background-color: white;
