--- a/frontend/src/styles/AvailableFlights.css
+++ b/frontend/src/styles/AvailableFlights.css
@@ -12,12 +12,33 @@
     padding-top: 80px;
 }
 
+.available-flights .search-bar{
+    width: 200px;
+    height: 25px;
+    margin-right: 15px;
+    outline: none;
+}
+
 .available-flights > div:first-child{
     width: 80%;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
+
+.available-flights .search-bar + button{
+    background-color: #ff3131;
+    border: none;
+    color: white;
+    height: 25px;
+    width: 100px;
+    cursor: pointer;
+}
+
+.available-flights .search-bar + button:hover{
+    background-color: #ffafaf;
+}
+
 
 .available-flights select{
     width: 180px;
@@ -30,6 +51,23 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
+}
+
+@media screen and (max-width: 630px) {
+    .available-flights > div:first-child{
+        flex-direction: column;
+        align-items: start;
+    }
+
+    .available-flights > div:first-child > div{
+        width: 100%;
+        margin-bottom: 20px;
+    }
+    .available-flights .search-bar{
+        width: 80%;
+        margin-bottom: 10px;
+    }
+
 }
 
 
