--- a/frontend/src/Pages/UserPage/ChatBot.css
+++ b/frontend/src/Pages/UserPage/ChatBot.css
@@ -29,8 +29,8 @@
     position: absolute;
     bottom: 100%;
     right: 60px;
-    width: 300px;
-    height: 400px;
+    width: 400px;
+    height: 500px;
     border-radius: 20px;
     border: 1px solid grey;
     background-color: white;
@@ -42,13 +42,18 @@
     border-top-right-radius: 20px;
     width: 100%;
     height: 80px;
+    color: white;
+    padding: 0 20px;
+    display: flex;
+    align-items: center;
+    box-sizing: border-box;
 }
 
 .chat-bot-container .messages-container{
     padding: 10px;
     display: flex;
     flex-direction: column;
-    height: 60%;
+    height: 70%;
     overflow-y: auto;
 }
 
@@ -59,9 +64,11 @@
     padding: 5px;
 }
 
-.chat-bot-container .messages-container .message-box p{
+.chat-bot-container .messages-container .message-box li{
     padding: 7px;
     border-radius: 8px;
+    list-style: none;
+    line-height: 2;
 }
 
 .chat-bot-container .messages-container .message-box img{
@@ -77,12 +84,12 @@
     justify-content: flex-end;
 }
 
-.chat-bot-container .message-box.Bot p{
+.chat-bot-container .message-box.Bot li{
     background-color: #ff3131;
     color: white;
 }
 
-.chat-bot-container .message-box.You p{
+.chat-bot-container .message-box.You li{
     background-color: rgb(194, 194, 194);
 }
 
@@ -91,7 +98,7 @@
     padding: 10px;
     display: grid;
     align-items: center;
-    grid-template-columns: 1fr 70px;
+    grid-template-columns: 1fr 100px;
     box-sizing: border-box;
     gap: 20px;
 }
