--- a/frontend/src/Pages/UserPage/ChatBot.css
+++ b/frontend/src/Pages/UserPage/ChatBot.css
@@ -31,7 +31,9 @@
     right: 60px;
     width: 400px;
     height: 500px;
-    border-radius: 20px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    border-bottom-left-radius: 20px;
     border: 1px solid grey;
     background-color: white;
 }
