--- a/frontend/src/styles/TablePage.css
+++ b/frontend/src/styles/TablePage.css
@@ -10,18 +10,11 @@
     font-size: 30px;
 }
 
-.table-page > input[type = 'search']{
+.table-page input[type = 'search']{
     width: 300px;
     height: 30px;
     margin-bottom: 30px;
     outline: none;
-}
-
-.table-page > select{
-    width: 200px;
-    height: 30px;
-    margin: 20px 0;
-    margin-left: 30px;
 }
 
 .table-page .table-container{
