--- a/frontend/src/Components/User/Modals/Settings.css
+++ b/frontend/src/Components/User/Modals/Settings.css
@@ -72,6 +72,7 @@
 .settings .buttons{
     display: flex;
     justify-content: space-between;
+    margin-top: 50px;
 }
 
 .settings .buttons button{
