--- a/frontend/src/Pages/UserPage/UserFlights.css
+++ b/frontend/src/Pages/UserPage/UserFlights.css
@@ -33,6 +33,8 @@
     justify-content: space-around;
     align-items: center;
     position: relative;
+    box-shadow: 0 0 5px 2px rgb(199, 199, 199);
+    border: 1px solid rgb(219, 219, 219);
 }
 
 .user-bookings .flight img{
