--- a/frontend/src/Pages/AuthPages/UserSignup.css
+++ b/frontend/src/Pages/AuthPages/UserSignup.css
@@ -64,8 +64,6 @@
 .user-signup .right-container form{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    text-align: center;
 }
 
 .user-signup .email-code{
@@ -98,23 +96,10 @@
     text-decoration: underline;
 }
 
-.user-signup .other-details{
+.user-signup select{
     margin-top: 20px;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-}
-
-.user-signup .other-details input{
-    width: 30%;
-    border: 1px solid rgb(184, 184, 184);
-}
-
-.user-signup .other-details input{
+    width: 45%;
     height: 30px;
-}
-
-.user-signup .other-details select{
     outline: none;
 }
 
