--- a/frontend/src/styles/Flights.css
+++ b/frontend/src/styles/Flights.css
@@ -74,6 +74,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
+}
+
+.flights-container > div:last-child h4{
+    line-height: 2;
 }
 
 .flights-container > div:last-child > button{
