--- a/frontend/src/styles/TablePage.css
+++ b/frontend/src/styles/TablePage.css
@@ -7,14 +7,26 @@
 }
 
 .report-btn{
+    margin-top: 20px;
     height: 30px;
-    position: absolute;
-    bottom: 40px;
-    right: 15px;
     font-size: 18px;
     cursor: pointer;
 }
 
+.table-page .date-filter-container{
+    display: flex;
+    margin-bottom: 20px;
+}
+
+.table-page .date-filter-container input{
+    margin-right: 20px;
+    width: 200px;
+    height: 30px;
+}
+
+.table-page .date-filter-container p{
+    margin-bottom: 5px;
+}
 
 .table-page > h1{
     font-size: 30px;
@@ -34,6 +46,15 @@
     overflow-x: auto;
     background-color: white;
     border: 2px solid rgb(235, 235, 235);
+    position: relative;
+}
+
+.table-page .table-container .loading{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 20px;
 }
 
 .table-page .table-container table{
@@ -70,7 +91,6 @@
 .table-page .add-btn{
     margin-top: 20px;
     background-color: #ff3131;
-    position: absolute;
     color: white;
     border: none;
     font-size: 16px;
