--- a/frontend/src/Components/Admin/Pagination/AdminPagination.css
+++ b/frontend/src/Components/Admin/Pagination/AdminPagination.css
@@ -2,8 +2,8 @@
     display: flex;
     align-items: center;
     position: absolute;
-    top: 150px;
-    right: 15px;
+    top: -50px;
+    right: 0;
 }
 
 .pagination-controls button{
