--- a/frontend/src/Pages/AdminPage/AdminDashboard.css
+++ b/frontend/src/Pages/AdminPage/AdminDashboard.css
@@ -66,7 +66,17 @@
     display: grid;
     grid-template-columns: 3fr 1fr;
     margin-top: 30px;
-    gap: 30px;
+    column-gap: 30px;
+    row-gap: 60px;
+}
+
+.admin-dashboard .chart-container select{
+    width: 150px;
+    height: 30px;
+    outline: none;
+    float: right;
+    margin-top: 20px;
+    margin-right: 10px;
 }
 
 .admin-dashboard .bar-chart-container,
