--- a/frontend/src/Components/Admin/Partials/AdminHeader.css
+++ b/frontend/src/Components/Admin/Partials/AdminHeader.css
@@ -7,9 +7,12 @@
     border-bottom: 2px solid rgb(235, 235, 235);
     padding: 10px;
     z-index: 3;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-.admin-header button{
+.admin-header .logo-container button{
     height: 30px;
     width: 40px;
     border: none;
@@ -18,7 +21,7 @@
     display: none;
 }
 
-.admin-header button img{
+.admin-header .logo-container button img{
     width: 100%;
     height: 100%;
 }
@@ -41,7 +44,7 @@
 }
 
 @media screen and (max-width: 768px) {
-    .admin-header button{
+    .admin-header .logo-container button{
         display: flex;
     }
 
