--- a/frontend/src/Components/Seats/Seats.css
+++ b/frontend/src/Components/Seats/Seats.css
@@ -40,6 +40,14 @@
     position: absolute;
 }
 
+.seats .seat .new{
+    top: -7px;
+    right: -8px;
+    width: 25px;
+    height: 25px;
+    position: absolute;
+}
+
 
 .seats .seat:not(:disabled):hover{
     background-color: rgb(150, 150, 150);
